--- a/app/build.gradle
+++ b/app/build.gradle
@@ -48,5 +48,6 @@ dependencies {
     annotationProcessor 'com.github.bumptech.glide:compiler:4.12.0'
 
     implementation 'androidx.swiperefreshlayout:swiperefreshlayout:1.1.0'
+    implementation 'com.google.android.material:material:1.3.0'
 
 }
